[project]
name = "py-test-threading"
version = "0.1.0"
description = "Benchmark Python 3.14 free-threading capabilities"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
benchmark = "benchmark.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]
